# PythonMonkey

./: '  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  C++styleguide.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  build.py  build_script.sh  console.js  dcp-support.py  fs-basic.py  js-test-runner  main.py  mozcentral.version  package-lock.json  package.json  parse-moz-environment  peter-jr  pmjs  pmjs-require.js  pyproject.toml  pythonmonkey_require.py  setup.py  setup.sh  temp.py  test.py  test_script.sh  uncrustify.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_pythonmonkey.yaml  feature_pythonmonkey.yaml
.github/workflows/: publish.yaml  test-and-publish.yaml  test-windows-wget.yaml  tests.yaml  update-mozcentral-version.yaml
cmake/docs/: CMakeLists.txt  Doxyfile.in  header.html
cmake/format/: CMakeLists.txt  uncrustify.cfg
cmake/modules/: FindSpiderMonkey.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: use-python-module.py  use-require.py
examples/use-python-module/: index.js  my-python-module.py
examples/use-require/: test1.js  test2.js
format/: CMakeLists.txt  uncrustify.cfg
githooks/: pre-commit
include/: BoolType.hh  BufferType.hh  DateType.hh  DictType.hh  DictType.hpp  ExceptionType.hh  FloatType.hh  FuncType.hh  FuncType.hpp  InferredPyType.hpp  IntPyType.hpp  IntType.hh  IntType.hpp  JSArrayIterProxy.hh  JSArrayProxy.hh  JSFunctionProxy.hh  JSMethodProxy.hh  JSObjectItemsProxy.hh  JSObjectIterProxy.hh  JSObjectKeysProxy.hh  JSObjectProxy.hh  JSObjectValuesProxy.hh  JSStringProxy.hh  JobQueue.hh  ListType.hh  NoneType.hh  NullType.hh  PromiseType.hh  PyBaseProxyHandler.hh  PyBytesProxyHandler.hh  PyDictOrObjectProxyHandler.hh  PyDictProxyHandler.hh  PyEvaluator.hh  PyEventLoop.hh  PyIterableProxyHandler.hh  PyIteratorProxyHandler.hh  PyListProxyHandler.hh  PyObjectProxyHandler.hh  PyProxyHandler.hh  PyTuple.hh  (+22 more)
include/modules/bifrost2/: bifrost2.hh
include/modules/explore/: explore.hh
include/modules/pythonmonkey/: pythonmonkey.hh
pmjs-lib/: event-loop-asyncio.py  event-loop.js  global-init.js  program-init.js
python/pminit/: pmpm.py  post-install-hook.py  pyproject.toml
python/pminit/pminit/: __init__.py  cli.py
python/pminit/pythonmonkey/: package-lock.json  package.json
python/pythonmonkey/: __init__.py  global.d.ts  helpers.py  newfile.py  package-lock.json  package.json  public.py  pythonmonkey.pyi  require.py  tsconfig.json
python/pythonmonkey/builtin_modules/: base64.js  (+18 more)
src/: BoolType.cc  BufferType.cc  CMakeLists.txt  DateType.cc  DictType.cc  DictType.cpp  ExceptionType.cc  FloatType.cc  FuncType.cc  FuncType.cpp  IntType.cc  IntType.cpp  JSArrayIterProxy.cc  JSArrayProxy.cc  JSFunctionProxy.cc  JSMethodProxy.cc  JSObjectItemsProxy.cc  JSObjectIterProxy.cc  JSObjectKeysProxy.cc  JSObjectProxy.cc  JSObjectValuesProxy.cc  JSStringProxy.cc  JobQueue.cc  ListType.cc  NoneType.cc  NullType.cc  PromiseType.cc  PyBaseProxyHandler.cc  PyBytesProxyHandler.cc  PyDictOrObjectProxyHandler.cc  PyDictProxyHandler.cc  PyEvaluator.cc  PyEventLoop.cc  PyIterableProxyHandler.cc  PyIteratorProxyHandler.cc  PyListProxyHandler.cc  PyObjectProxyHandler.cc  PyProxyHandler.cc  PyTuple.cc  PyTuple.cpp  (+17 more)
src/internalBinding/: timers.cc  utils.cc
src/modules/bifrost2/: bifrost2.cc
src/modules/explore/: explore.cc
src/modules/pythonmonkey/: pythonmonkey.cc
tests/: CMakeLists.txt
tests/cpp/: test_abstract_types.cc  test_abstract_types.cpp  test_dict_type.cc  test_dict_type.cpp  test_explore.cc  test_inferred_type.cpp  test_int_pytype.cc  test_int_pytype.cpp  test_list_type.cc  test_python_evaluator.cc  test_pytype_factory.cc  test_pytype_factory.cpp  test_str_type.cc  test_str_type.cpp  test_tuple.cc  test_tuple.cpp  test_tuple_type.cc  test_type.cpp
tests/js/: collide.simple  commonjs-modules.bash  console-methods.simple  console-smoke.simple  console-stdio.bash  console-this.simple  eval-test.simple  is-compilable-unit.simple  load-cjs-module.simple  load-cjs-python-module.simple  not-strict-mode.simple  pmjs-eopt.bash  pmjs-global-arguments.bash  pmjs-interactive-smoke.bash  pmjs-popt.bash  pmjs-require-cache.bash  pmjs-require-cache.js  pmjs-ropt.bash  program-exit.bash  program-exit.js  program-module.simple  program-throw.bash  program-throw.js  program.js  quint.js  require-module-stack.bash.failing  set-interval.bash  set-timeout.simple  test-atob-btoa.simple  throw-filename.js  timer-reject.bash  timer-reject.js  timer-throw.bash  timer-throw.js  timers-force-exit.simple  timers-natural-exit.bash  timers-natural-exit.js  timers-segfault.simple  timers-segfault.simple.failing  typeofs-segfaults.simple.failing  (+8 more)
tests/js/js2py/: array-change-index.simple  arraybuffer.simple  bigint.simple  boolean.simple  datetime.simple.failing  datetime2.simple  datetime2.simple.failing  error.simple  function-curry.simple  higher-order-function.simple  kwargs.simple  object-mutation.simple  object.simple  promise-await-in-python.simple  promise.simple  promise.simple.failing  string.simple  trivial-function.simple
tests/js/modules/: cjs-module.js  collide.js  collide.py  print-load.js  python-cjs-module.py  vm-tools.py
tests/js/py2js/: array-change-index.simple  arraybuffer.simple  boolean.simple  datetime.simple  datetime.simple.failing  error.simple  function-curry.simple.failing  higher-order-function.simple  integer.simple  object-methods.simple  object-methods.simple.failing  object.simple  promise.simple.failing  string.simple  trivial-function.simple
tests/js/resources/: eval-test.js
tests/python/: conftest.py  reentrance_smoke.py  test_arrays.py  test_bigints.py  test_buffer_typed_array.py  test_dict_methods.py  test_dicts.py  test_dicts_lists.py  test_event_loop.py  test_explore.py  test_finalizationregistry.py  test_functions.py  test_functions_this.py  test_isolated_contexts.py  test_list_array.py  test_list_methods.py  test_lists.py  test_new.py  test_objects.py  test_pythonmonkey.py  test_pythonmonkey_eval.py  test_reentrance_smoke.py  test_strings.py  test_xhr.py
(+12 files in other folders)
