[tool.poetry]
name = "pythonmonkey"
version = "0" # automatically set by poetry-dynamic-versioning
description = ""
authors = ["Caleb Aikens <caleb@distributive.network>", "Tom Tang <xmader@distributive.network>", "Wes Garland <wes@distributive.network>", "Hamada Gasmallah <hamada@distributive.network>", "Philippe Laporte <philippe@distributive.network>"]
readme = "README.md"
packages = [
  { include = "pythonmonkey", from = "python" },
]
include = [
  # Linux and macOS
  "python/pythonmonkey/pythonmonkey.so",
  "python/pythonmonkey/libmozjs*",

  # Windows
  "python/pythonmonkey/pythonmonkey.pyd",
  "python/pythonmonkey/mozjs-*.dll",

  # include all files for source distribution
  { path = "src", format = "sdist" },
  { path = "include", format = "sdist" },
  { path = "cmake", format = "sdist" },
  { path = "tests", format = "sdist" },
  { path = "CMakeLists.txt", format = "sdist" },
  { path = "*.sh", format = "sdist" },
]


[tool.poetry.dependencies]
python = "^3.8"
pyreadline3 = { version = "^3.4.1", platform = "win32" }
aiohttp = { version = "^3.9.3", extras = ["speedups"] }
pminit = { version = "*", allow-prereleases = true }


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true

[tool.poetry-dynamic-versioning.substitution]
# Set the project version number in CMakeLists.txt
files = [ "CMakeLists.txt" ]
patterns = [ '(set\(PYTHONMONKEY_VERSION ")0("\))' ]


[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.scripts]
pmjs = "pythonmonkey.cli.pmjs:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pip = "^23.1.2"
numpy = [
  {version = "^1.26.1", python = ">=3.9,<3.13"},
  {version = "^1.24.3", python = "3.8.*"},
]
pminit = { path = "./python/pminit", develop = true }


[build-system]
requires = ["poetry-core>=1.1.1", "poetry-dynamic-versioning==1.1.1"]
build-backend = "poetry_dynamic_versioning.backend"
