[tool.poetry]
name = "pminit"
version = "0"
description = "Post-install hook for PythonMonkey"
authors = [
  "Distributive Corp. <pm@distributive.network>"
]
license = "MIT"
homepage = "https://pythonmonkey.io/"
documentation = "https://docs.pythonmonkey.io/"
repository = "https://github.com/Distributive-Network/PythonMonkey"

include = [
  # Install extra files into the pythonmonkey package
  "pythonmonkey/package*.json",
  { path = "pythonmonkey/node_modules/**/*", format = "wheel" },
  # pip builds (and actually installs from) the wheel when installing from sdist
  # we don't want node_modules inside the sdist package
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true

[tool.poetry.build]
script = "post-install-hook.py"
generate-setup-file = false

[tool.poetry.scripts]
pminit = "pminit.cli:main"

[build-system]
requires = ["poetry-core>=1.1.1", "poetry-dynamic-versioning==1.1.1"]
build-backend = "poetry_dynamic_versioning.backend"

